@@ -11,6 +11,7 @@ Revision history for Perl extension Tk::Getopt.
 	- added "make demo" rule
 	- Pod update
 	- added some missing keys to the Makefile.PL
+	- tests: protect from missing DISPLAY
 
 0.49
 	- new button "oksave"
